fix(modals): added min-width 0 to avoid grid brekage when truncate classes used (#5368)

--- a/ui/components/modals/base/_index.scss
+++ b/ui/components/modals/base/_index.scss
@@ -344,7 +344,7 @@
         "header"
         "content"
         "footer";
-      grid-template-columns: 1fr;
+      grid-template-columns: minmax(0, 1fr);
     }
 
     /**
